# IABDG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: buildOpenCv.cmake
data/: matrixTest1.txt
src/: compareVideo.cpp  imageDisplay.cpp  webcam.cpp
src/FirstProgram/: BackgroundFiltering.cpp  BackgroundFiltering.h  BasicDetector.cpp  BasicDetector.h  BodyPartRecognition.cpp  BodyPartRecognition.h  Game.cpp  Game.h  NinjaBattle.cpp  NinjaBattle.h  Webcam.cpp  Webcam.h  main.cpp
